--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </div>
   <div class="container">
     <h2>Who made it?</h2>
+
     <p>React was developed by Jordan Walke, a software engineer at Facebook. The first deployment was with Facebook's newsfeed in 2011. It is maintained by developers and Facebook and Instagram. </p>
+    <p>The first public release was in March 2013</p>
   </div>
 
   <div class="container">
