--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
     <h2>Who uses it?</h2>
     <p>According to <a href="https://stackshare.io/react/in-stacks">stackshare.io</a>: </p>
     <ul>
-      <li>Facebook</li>
-      <li>Instagram</li>
-      <li>Twitter</li>
-      <li>Pinterest</li>
-      <li>Airbnb</li>
-      <li>Codeacademy</li>
-      <li>Uber</li>
-      <li>Lyft</li>
-      <li>Netflix</li>
-      <li>Reddit</li>
-      <li>OkCupid</li>
+      <li> <a href="http://www.facebook.com/"></a> Facebook</li>
+      <li> <a href="http://www.instagram.com/"></a> Instagram</li>
+      <li> <a href="http://www.twitter.com/"></a> Twitter</li>
+      <li> <a href="http://www.pinterest.com/"></a> Pinterest</li>
+      <li> <a href="http://www.airbnb.com/"></a> Airbnb</li>
+      <li> <a href="http://www.codecademy.com/"></a> Codeacademy</li>
+      <li> <a href="http://www.uber.com/"></a> Uber</li>
+      <li> <a href="http://www.lyft.com/"></a> Lyft</li>
+      <li> <a href="http://www.netflix.com/"></a> Netflix</li>
+      <li> <a href="http://www.reddit.com/"></a> Reddit</li>
+      <li> <a href="http://www.okcupid.com/"></a> OkCupid</li>
     </ul>
   </div>
 
